# aicomm

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _typos.toml  cliff.toml  deny.toml  loading.py  package-lock.json  package.json  summary.md  test.rest
.github/workflows/: build.yml
chat/: .gitignore  Cargo.toml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: ollama.rs  openai.rs
chat/analytics-server/: Cargo.toml  analytics.yml  build.rs
chat/analytics-server/examples/: db.rs  sender.rs
chat/analytics-server/src/: config.rs  error.rs  extractors.rs  handler.rs  handlers.rs  lib.rs  openapi.rs
chat/bot-server/: Cargo.toml
chat/bot-server/src/: config.rs  indexer.rs  lib.rs  notif.rs  server.rs
chat/chat_core/: Cargo.toml
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs
chat/chat_core/src/utils/: jwt.rs
chat/chat_server/: Cargo.toml
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  error.rs
chat/chat_server/src/handlers/: agent.rs  chat.rs  messages.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs
chat/chat_server/src/models/: agent.rs  messages.rs  user.rs
chat/chat_test/: Cargo.toml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20241030020459_agent.sql  20241112124532_agent_adapter.sql  20241120130751_user_bot.sql
chat/notify_server/: Cargo.toml
chatapp/: buf.gen.yaml  package-lock.json  package.json
chatapp/src/: App.vue  main.js
chatapp/src-tauri/src/fixtures/: config.default.yml
chatapp/src/analytics/: event.js
chatapp/src/assets/: styles.css
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/router/: index.js
chatapp/src/store/: index.js
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
protos/: clickhouse.sql
src/: App.vue  main.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  utils.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/fixtures/: config.default.yml
src/assets/: styles.css
src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
src/store/: index.js
src/views/: Chat.vue  Login.vue  Register.vue
swiftide-pgvector/: Cargo.toml  README.md
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
