[workspace]
members = [
  "chat_server",
  "chat_core",
  "notify_server",
  "chat_test",
  "ai_sdk",
  "bot-server",
  "analytics-server",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.91"
axum = { version = "0.7.7", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
notify-server = { path = "./notify_server" }
swiftide-pgvector = "0.1.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132" }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
jwt-simple = "0.12.10"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
