[package]
name = "swiftide-pgvector"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
derive_builder = "0.20.2"
pgvector = { version = "0.4.0", features = ["sqlx"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["postgres", "uuid"] }
swiftide-core = "0.14.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
sqlx = { version = "0.8.2", features = [
	"postgres",
	"runtime-tokio",
	"tls-rustls",
] }
swiftide = { version = "0.14.2", features = ["openai", "tree-sitter"] }
tokio = { version = "1.41.1", features = [
	"rt",
	"net",
	"rt-multi-thread",
	"macros",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
