[package]
name = "ai_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
reqwest = { version = "0.12.9", default-features = false, features = [
	"rustls-tls",
	"json",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "net", "rt-multi-thread", "macros"] }
