[package]
name = "analytics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.83"
axum = { workspace = true }
chat-core = { workspace = true }
clickhouse = { version = "0.13.1", features = ["rustls-tls", "time"] }
futures-util = { version = "0.3.31", default-features = false }
prost = "0.13.3"
prost-types = "0.13.3"
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "5.1.3", features = ["axum_extras", "chrono"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
chrono = { workspace = true, features = ["serde"] }
serde_json = "1.0.133"

[build-dependencies]
anyhow.workspace = true
prost-build = "0.13.3"
proto-builder-trait = { version = "0.6.2", features = [
	"prost",
], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.13.1", features = [
	"rustls-tls",
	"time",
	"test-util",
] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json"] }
